Fix for background image not showing
Fixing the file path for background image now showing

--- a/src/output.css
+++ b/src/output.css
@@ -606,8 +606,9 @@ video {
   border-radius: 0.125rem;
 }
 
-.border {
-  border-width: 1px;
+.bg-red-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
 }
 
 .bg-sky-300 {
@@ -615,18 +616,22 @@ video {
   background-color: rgb(125 211 252 / var(--tw-bg-opacity));
 }
 
+.bg-slate-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-red-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+.bg-\[url\(\'img\/pexels-fotios-photos-3022003\.jpg\'\)\] {
+  background-image: url('img/pexels-fotios-photos-3022003.jpg');
 }
 
 .bg-\[url\(\'\/img\/pexels-fotios-photos-3022003\.jpg\'\)\] {
-  background-image: url('src/pexels-fotios-photos-3022003.jpg');
+  background-image: url('/img/pexels-fotios-photos-3022003.jpg');
 }
 
 .bg-cover {
@@ -645,26 +650,6 @@ video {
   padding: 1.75rem;
 }
 
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -675,20 +660,12 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.pt-10 {
-  padding-top: 2.5rem;
-}
-
 .pt-32 {
   padding-top: 8rem;
 }
 
 .text-center {
   text-align: center;
-}
-
-.font-mono {
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 .text-2xl {
@@ -705,24 +682,12 @@ video {
   font-weight: 700;
 }
 
-.font-thin {
-  font-weight: 100;
-}
-
-.font-semibold {
-  font-weight: 600;
-}
-
-.font-normal {
-  font-weight: 400;
-}
-
-.font-black {
-  font-weight: 900;
-}
-
 .font-extralight {
   font-weight: 200;
+}
+
+.font-thin {
+  font-weight: 100;
 }
 
 .text-black {
@@ -735,12 +700,12 @@ video {
   color: rgb(244 114 182 / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .text-pink-500 {
   --tw-text-opacity: 1;
   color: rgb(236 72 153 / var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
